--- a/styles/Footer/_Footer.scss
+++ b/styles/Footer/_Footer.scss
@@ -1,75 +1,93 @@
 footer {
-    background: #414141;
-    color: #fff;
-    font-size: $font-medium;
-    bottom: 0;
-    width: 100%;
-    grid-area: footer;
-    line-height: 1.5;
+  background: $black-three;
+  color: white;
+  font-size: $font-medium;
+  bottom: 0;
+  width: 100%;
+  grid-area: footer;
+  line-height: 1.5;
 }
 
 .footer-wrapper {
-    padding: 40px 60px;
+  padding: 40px 60px;
 }
 
 .footer-side--two {
-    ul {
-        list-style: none;
-        display: flex;
-        li a {
-            text-decoration: none;
-            color: inherit;
 
-            &:hover {
-                text-decoration: underline;
-            }
-        }
+  ul {
+    list-style: none;
+    display: flex;
 
-        li + li {
-            margin: 5px 0;
-        }
+    .menu-wrapper {
+      display: inline-block;
+      text-align: left;
     }
+
+    li a {
+      text-decoration: none;
+      color: inherit;
+      font-weight: bold;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+
+    li {
+      margin: 0px;
+    }
+  }
 }
 
 .footer-side--three {
-    text-align: center;
+  text-align: center;
+
+  .side-three-container {
+    display: inline-block;
+
+    .footer-title {
+      text-align: left;
+
+    }
+  }
 }
 
 .footer-side {
-    //text-align: center;
-    .footer-title {
-        text-transform: uppercase;
-        font-size: 20px;
-        font-weight: bold;
-        padding-bottom: 16px;
 
-        img {
-            height: 20px;
-        }
-    }
+  .footer-title {
+    font-size: 2rem;
+    font-weight: bold;
+    font-style: italic;
+    padding-bottom: 16px;
 
-    p {
-        font-size: $font-medium;
-        font-weight: 500;
+    img {
+      height: 20px;
     }
+  }
+
+  p {
+    font-size: $font-medium;
+    font-weight: 500;
+  }
 }
 
 .footer-contact-container {
-    a {
-        text-decoration: none;
-        color: $white;
+  a {
+    text-decoration: none;
+    color: $white;
 
-        &:hover {
-            text-decoration: underline;
-        }
+    &:hover {
+      text-decoration: underline;
     }
+  }
 
-    div + div {
-        margin: 5px 0;
-    }
+  div+div {
+    margin: 5px 0;
+  }
 
-    img.contact-icon {
-        height: 35px;
-        width: auto;
-    }
+  img.contact-icon {
+    height: 20px;
+    width: 20px;
+    margin-right: 1em;
+  }
 }
