--- a/styles/default.scss
+++ b/styles/default.scss
@@ -42,7 +42,11 @@ body {
   grid-area: content;
   padding-top: 3rem;
   padding-bottom: 5rem;
-  // overflow-x: hidden;  
+  overflow: hidden;
+}
+
+footer.footer-home {
+  z-index: 0;
 }
 
 .overflow-x-hidden {
@@ -599,7 +603,34 @@ hr.border {
       width: 65%;
       height: 3px;
       margin: auto;
-      margin-bottom: 7.625rem;
+      margin-bottom: 20.625rem;
+    }
+
+    .mari-berkreasi-container {
+      // position: relative;
+      // text-align: center;
+      // margin-bottom: -187px;
+
+      .mari-berkreasi {
+        display: inline-block;
+        background-color: white;
+        border-radius: 9px;
+        margin: auto;
+        padding: 4.2em 8em;
+        text-align: center;
+        // position: absolute;
+        // left: 0;
+        // right: 0;
+        // bottom: -139px;
+
+        >h2 {
+          margin-bottom: 2rem;
+        }
+
+        >p {
+          margin-bottom: 5em;
+        }
+      }
     }
   }
 }
