--- a/styles/_queries.scss
+++ b/styles/_queries.scss
@@ -78,6 +78,14 @@
     }
   }
 
+  .mari-berkreasi-container {
+    margin: auto 1em;
+
+    .mari-berkreasi {
+      padding: 3em 5em;
+    }
+  }
+
 
   // For services page
   #content.services-content {
