--- a/styles/default.scss
+++ b/styles/default.scss
@@ -430,7 +430,7 @@ hr.border {
     h2.home-section-title {
       color: $black-three;
       font-size: 3rem;
-      font-weight: 800;
+      font-weight: bold;
     }
 
     p.home-section-paragraph {
@@ -604,33 +604,6 @@ hr.border {
       height: 3px;
       margin: auto;
       margin-bottom: 20.625rem;
-    }
-
-    .mari-berkreasi-container {
-      // position: relative;
-      // text-align: center;
-      // margin-bottom: -187px;
-
-      .mari-berkreasi {
-        display: inline-block;
-        background-color: white;
-        border-radius: 9px;
-        margin: auto;
-        padding: 4.2em 8em;
-        text-align: center;
-        // position: absolute;
-        // left: 0;
-        // right: 0;
-        // bottom: -139px;
-
-        >h2 {
-          margin-bottom: 2rem;
-        }
-
-        >p {
-          margin-bottom: 5em;
-        }
-      }
     }
   }
 }
