--- a/styles/_queries.scss
+++ b/styles/_queries.scss
@@ -139,6 +139,7 @@
 
 @media all and (min-width: 300px) and (max-width: 614px) {
 
+  // Header (Navbar)
   .header-wrapper {
     padding: 0 3rem;
   }
@@ -150,6 +151,7 @@
     }
   }
 
+  // Home Carousel (unused)
   .banner-right-container {
     text-align: center;
     max-width: 614px;
@@ -179,22 +181,12 @@
     }
   }
 
-  .xs-w-90 {
-    width: 90%;
-  }
-
-  // .footer-wrapper {
-  //   text-align: center;
-
-  //   .MuiGrid-spacing-xs-2>.MuiGrid-item {
-  //     padding: 1.3rem;
-  //   }
-  // }
-
+  // used in pages/products
   .product-container {
     grid-template-columns: 1fr;
   }
 
+  // used in almost ALL Pages
   .width--large {
     width: 90%;
   }
