[Add & Fix] add LoginModal component & fix errors on Services + Home Page

--- a/styles/default.scss
+++ b/styles/default.scss
@@ -630,4 +630,5 @@ hr.border {
 @import './HeroHome/HeroHome';
 @import './TestimonialSlider/TestimonialSlider';
 @import './ArticleList/ArticleList';
+@import './LoginModal/LoginModal';
 @import 'queries';
