--- a/styles/default.css
+++ b/styles/default.css
@@ -2233,6 +2233,16 @@ input[type=text]:focus, input[type=password]:focus {
   font-weight: bold;
 }
 
+.login-modal-backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 20;
+}
+
 @media all and (min-width: 768px) and (max-width: 1024px) {
   .hero-home-container .content-wrapper {
     width: 95%;
