--- a/styles/default.scss
+++ b/styles/default.scss
@@ -622,7 +622,6 @@ hr.border {
 @import './Footer/Footer';
 @import './Header/Header';
 @import './HeaderBar/HeaderBar';
-@import './TextInput/TextInput';
 @import './Card/Card';
 @import './Accordion/Accordion';
 @import './PageHeader/PageHeader';
@@ -631,4 +630,5 @@ hr.border {
 @import './TestimonialSlider/TestimonialSlider';
 @import './ArticleList/ArticleList';
 @import './LoginModal/LoginModal';
+@import './TextInputModal/TextInputModal';
 @import 'queries';
