--- a/styles/LoginModal/_LoginModal.scss
+++ b/styles/LoginModal/_LoginModal.scss
@@ -4,8 +4,77 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, .9);
+  background-color: rgba(112, 112, 112, .37);
+  backdrop-filter: blur(5px);
   z-index: 20;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
+  .modal-content {
+    background-color: white;
+    border-radius: 7px;
+    padding: 62px 5rem 1.5rem;
+
+    text-align: center;
+    position: relative;
+
+    .close-icon {
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin-top: 12px;
+      margin-right: 19px;
+      padding: 3px;
+      cursor: pointer;
+      border-radius: 100%;
+
+      &:hover {
+        color: red;
+        // filter: opacity(.2);
+      }
+    }
+
+    h4 {
+      margin-bottom: 1.5rem;
+      color: $black-three;
+      font-size: 1.33rem;
+      font-weight: 600;
+    }
+
+    span.or-word {
+      display: block;
+      color: $greyish-brown-four;
+      font-size: 1rem;
+      font-weight: 500;
+      margin-top: 0.916rem;
+      margin-bottom: 0.916em;
+    }
+
+    .signin-with-google-button {
+      width: 192px;
+      margin-bottom: 33.6px;
+      cursor: pointer;
+
+      &:hover {
+        filter: opacity(.85);
+      }
+    }
+
+    p {
+      display: block;
+
+      a.link-register {
+        color: $dark-grey-blue;
+        font-size: 1rem;
+        font-weight: 600;
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
 }
