--- a/styles/HeroHome/_HeroHome.scss
+++ b/styles/HeroHome/_HeroHome.scss
@@ -34,6 +34,8 @@
           a {
             color: $dark-slate-blue;
             font-weight: bold;
+            text-decoration: underline;
+            cursor: pointer;
 
             &:hover {
               text-decoration: none;
