--- a/styles/RegisterModal/_RegisterModal.scss
+++ b/styles/RegisterModal/_RegisterModal.scss
@@ -1,4 +1,4 @@
-.login-modal-backdrop {
+.register-modal-backdrop {
   position: fixed;
   top: 0;
   left: 0;
@@ -15,7 +15,7 @@
   .modal-content {
     background-color: white;
     border-radius: 7px;
-    padding: 62px 5rem 1.5rem;
+    padding: 32px 5rem 2rem;
 
     text-align: center;
     position: relative;
@@ -36,38 +36,31 @@
       }
     }
 
-    h4 {
-      margin-bottom: 1.5rem;
-      color: $black-three;
-      font-size: 1.33rem;
-      font-weight: 600;
-      text-align: left;
-    }
+    .form-header {
+      width: 300px;
 
-    span.or-word {
-      display: block;
-      color: $greyish-brown-four;
-      font-size: 1rem;
-      font-weight: 500;
-      margin-top: 0.916rem;
-      margin-bottom: 0.916em;
-    }
+      h4 {
+        color: $black-three;
+        font-size: 1.33rem;
+        font-weight: 600;
+        text-align: left;
+        margin-bottom: 5px;
+      }
 
-    .signin-with-google-button {
-      width: 192px;
-      margin-bottom: 33.6px;
-      cursor: pointer;
-
-      &:hover {
-        filter: opacity(.85);
+      p.subtitle {
+        margin-bottom: 1.75rem;
+        font-size: 11px;
+        font-weight: 500;
+        text-align: left;
       }
     }
 
-    p {
+    form p {
       display: block;
+      margin-top: 1.1em;
 
-      a.link-register {
-        color: $dark-grey-blue;
+      a.link-login {
+        color: $dark-slate-blue;
         font-size: 1rem;
         font-weight: 600;
         text-decoration: none;
