--- a/styles/default.scss
+++ b/styles/default.scss
@@ -629,6 +629,7 @@ hr.border {
 @import './HeroHome/HeroHome';
 @import './TestimonialSlider/TestimonialSlider';
 @import './ArticleList/ArticleList';
-@import './LoginModal/LoginModal';
 @import './TextInputModal/TextInputModal';
+@import './LoginModal/LoginModal';
+@import './RegisterModal/RegisterModal';
 @import 'queries';
