--- a/styles/LoginModal/_LoginModal.scss
+++ b/styles/LoginModal/_LoginModal.scss
@@ -20,6 +20,10 @@
     text-align: center;
     position: relative;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     .close-icon {
       position: absolute;
       top: 0;
