--- a/styles/RegisterModal/_RegisterModal.scss
+++ b/styles/RegisterModal/_RegisterModal.scss
@@ -20,6 +20,10 @@
     text-align: center;
     position: relative;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
     .close-icon {
       position: absolute;
       top: 0;
@@ -36,8 +40,9 @@
       }
     }
 
-    .form-header {
+    .register-form-header {
       width: 300px;
+      margin-right: auto;
 
       h4 {
         color: $black-three;
