[Fix] register popup's height

--- a/styles/RegisterModal/_RegisterModal.scss
+++ b/styles/RegisterModal/_RegisterModal.scss
@@ -60,6 +60,14 @@
       }
     }
 
+    .text-input-modal-container {
+      margin-bottom: 1.475rem;
+    }
+
+    .button.MuiButton-root {
+      margin-top: 4.1em;
+    }
+
     form p {
       display: block;
       margin-top: 1.1em;
