[Fix] Link articles on HomePage

--- a/styles/ArticleList/_ArticleList.scss
+++ b/styles/ArticleList/_ArticleList.scss
@@ -1,6 +1,9 @@
 .article-list-container {
 
   .article-list-item {
+    >a {
+      text-decoration: none;
+    }
 
     &:hover {
       cursor: pointer;
