--- a/styles/default.scss
+++ b/styles/default.scss
@@ -573,14 +573,16 @@ hr.border {
         margin-bottom: 4.5rem;
       }
 
+      a.see-more-articles-link {
+        color: $dark-slate-blue;
+        text-decoration: none;
+      }
+
       .see-more-articles {
         display: flex;
         justify-content: center;
         margin-top: 4em;
         cursor: pointer;
-
-        color: $dark-slate-blue;
-        text-decoration: none;
 
         .see-more-articles-link {
           display: flex;
