[Update] minor update className

--- a/styles/default.css
+++ b/styles/default.css
@@ -509,7 +509,7 @@ hr.border {
   width: 100%;
 }
 
-#content.home-content .content .block-show {
+#content.home-content .content .loka-features {
   background-color: white;
   border-radius: 12px;
   width: 100%;
