--- a/styles/default.scss
+++ b/styles/default.scss
@@ -454,7 +454,7 @@ hr.border {
       }
     }
 
-    .block-show {
+    .loka-features {
       background-color: white;
       border-radius: 12px;
       width: 100%;
